--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: 'Henkel Flexa', sans-serif;;
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -46,6 +46,7 @@
   --color-henkel-gray: var(--henkel-gray);
   --color-henkel-yellow: var(--henkel-yellow);
   --color-henkel-white: var(--henkel-white);
+  --color-henkel-dark-grey: var(--henkel-dark-grey);
 }
 
 :root {
@@ -86,6 +87,7 @@
   --henkel-gray: #BDCDDA;
   --henkel-yellow: #FBA700;
   --henkel-white: #FFFFFF;
+  --henkel-dark-grey: #3b3b3b
 }
 
 .dark {
@@ -122,3 +124,18 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+@font-face {
+  font-family: 'Henkel Flexa';
+  src: url('/fonts/Henkel-GT-Flexa-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Henkel Flexa';
+  src: url('/fonts/Henkel-GT-Flexa-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
